<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity"
    android:background="@color/blue">

    <androidx.cardview.widget.CardView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:id="@+id/profilecarduser"
        android:padding="15dp"
        app:cardCornerRadius="75dp"
        app:cardPreventCornerOverlap="false"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            android:id="@+id/profileuser"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profilenama"
        android:textColor="@color/white"
        android:layout_below="@id/profilecarduser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:textSize="26dp"
        android:textStyle="bold"
        android:id="@+id/namalengkap"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profilejob"
        android:textColor="@color/greynom"
        android:layout_below="@id/namalengkap"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="12dp"
        android:id="@+id/job"
        />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="300dp"
        android:layout_centerInParent="true"
        android:layout_height="50dp"
        android:id="@+id/bottomNavigation"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_background"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:elevation="2dp"
        app:menu="@menu/bottom_menu"
        app:itemIconTint="@color/white"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        app:tint="@color/white"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        android:backgroundTint="@color/blue"
        android:outlineSpotShadowColor="@color/blue"
        android:layout_marginLeft="15dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:cardCornerRadius="-30dp"
        android:layout_below="@id/floatingActionButton"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/broken_white">

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="310dp"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/white"
        android:layout_below="@id/job"
        android:id="@+id/bio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:text="@string/Description"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="57dp"
            android:background="@color/greynom" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_assignment_24"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="240dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/bio"
            android:textSize="13dp"
            android:justificationMode="inter_word" />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:background="@color/white"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/white"
        android:layout_below="@id/bio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:textStyle="bold"
            android:textSize="17dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="57dp"
            android:background="@color/greynom" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_account_circle_24"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="240dp"/>

        <ImageView
            android:id="@+id/wa"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="75dp"
            android:src="@drawable/wa"/>

        <ImageView
            android:id="@+id/linkedin"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="75dp"
            android:src="@drawable/linkedin"/>

        <ImageView
            android:id="@+id/gmail"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="165dp"
            android:layout_marginTop="75dp"
            android:src="@drawable/gmail"/>

        <ImageView
            android:id="@+id/github"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="220dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/github"/>

    </com.google.android.material.card.MaterialCardView>




</RelativeLayout>