<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue">
<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/appprofile"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:padding="15dp"-->
<!--        android:layout_marginLeft="15dp"-->
<!--        app:cardCornerRadius="25dp"-->
<!--        app:cardPreventCornerOverlap="false"-->
<!--        android:layout_marginBottom="5dp"-->
<!--        android:layout_alignParentTop="true">-->

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="50dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:src="@drawable/mandirilogo"-->
<!--            android:scaleType="centerCrop"/>-->


<!--    </androidx.cardview.widget.CardView>-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:layout_marginTop="19dp"-->
<!--        android:text="@string/apptitle"-->
<!--        android:textColor="@color/blue"-->
<!--        android:textSize="22dp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_toRightOf="@id/appprofile"-->
<!--        android:layout_alignParentRight="true"/>-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:id="@+id/mandirilogo"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="-20dp"
        android:src="@drawable/mandirilogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:cardCornerRadius="15dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/mandirilogo"
        android:backgroundTint="@color/broken_white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<!--            android:layout_below="@id/appprofile">-->

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="25dp"
                android:id="@+id/beritaterkini"
                android:layout_marginLeft="30dp"
                android:text="@string/titleberitaterkini"
                android:textColor="@color/blue"
                android:textSize="18dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:onClick="openTopNewsPage"/>

            <TextView
                android:id="@+id/seeall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="45dp"
                android:layout_toEndOf="@id/beritaterkini"
                android:layout_toRightOf="@id/beritaterkini"
                android:text="@string/seeall"
                android:textAlignment="textEnd"
                android:textColor="@color/seeall"
                android:textSize="14dp"
                android:clickable="true"
                android:onClick="seeall"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/beritaterkini"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/semuaberita"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_below="@id/recyclerView"
                android:text="@string/titlesemuaberita"
                android:textColor="@color/blue"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="openAllNewsPage"/>

            <TextView
                android:id="@+id/seealltopnews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="45dp"
                android:layout_toEndOf="@id/semuaberita"
                android:layout_toRightOf="@id/semuaberita"
                android:layout_below="@id/recyclerView"
                android:text="@string/seeall"
                android:textAlignment="textEnd"
                android:textColor="@color/seeall"
                android:textSize="14dp"
                android:clickable="true"
                android:onClick="seealltopnews"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewAllNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/semuaberita"
                android:layout_gravity="end"
                android:orientation="vertical" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bottom_background"
        app:itemIconTint="@color/white"
        android:elevation="2dp"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />
</RelativeLayout>